<h5>1.08 Beta 1       [2020-11-15]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.12, PHP 8.0 RC 4
<hr>
- renamed 'PHP_SELF' to 'SCRIPT_NAME' (mamba)
- Yoda & PSR-12 cosmetics (mamba)
- PHP7, PHP8 adjustments/cosmetics (mamba)
- added Migrate (mamba)


<h5>1.08 Beta 1       [2018-04-08]</h5>  Dev: Xoops 2.5.9, PHP 7.2.4
<hr>
- namespaces (mamba)
- Autoload (mamba)
- added Export data to YML - set in Preferences (mamba)
- added XoopsLogger (mamba)
- Constants in class (mamba)


<h5>1.07 RC 1       [NOT RELEASED]</h5>
<hr>
- fixed rating images (cesagonchu/mamba)
- renamed several $indexAdmin with $adminObject for consistency (mamba)
- updates for PayPal changes (zyspec)
- added Sample Data
- started conversion to XMF (mamba)
    - updated addInfoBoxLine entries (mamba)
    - displayNavigation(basename(__FILE__))  (mamba)
    - changed to ->displayButton('left') (mamba)

<h5>1.07 Beta 2                       [ 2015-05-01]</h5>
<hr>
- Update templates for bootstrap (bleekk)
- fixed bug in admin->broken (bleekk)
- fixed date bug in category and videos (bleekk)
- load css not in templates (bleekk)

<h5>1.07 Beta 1                       [2016-06-16]</h5>
<hr>
- conversion to XoopsRequest (mamba)
- PSR-2 adjustments (mamba)
- replaced intval() with (int) (mamba)
- XOOPS 2.5.8, PHP 7 adjustments (mamba)
- moved functions to Utility class (mamba)
- addNavigation(basename(__FILE__)) (mamba)
- removed @version (mamba)
- replaced < br /> with < br > (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- partial conversion to $GLOBALS (mamba)
- adapted Alphabet Letter Selection (mamba)
- added updated templates for xBootstrap theme (in /themes) (mamba)
- added HTML5 as default for YouTube (option/bleekk)


TODO: Needs code cleanup


<h5>1.06 RC 2                       [NOT RELEASED]</h5>
<hr>
- added language variables to block descriptions (mamba)
- some cosmetic source code formatting (mmamba)
- improved consistency of language variable naming for cloning (mamba)